# pisite

./: .gitignore  Cargo.toml  README.md  coverage.sh  notes.md  run_flask_dev.sh
angular-frontend/: README.md  angular.json  karma.conf.js  package.json
angular-frontend/src/: index.html
angular-frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  data.ts  models.ts  requester.service.ts
angular-frontend/src/app/endpoint/: endpoint.component.html  endpoint.component.ts
angular-frontend/src/app/endpoint-list/: endpoint-list.component.html  endpoint-list.component.ts
angular-frontend/src/app/show-test/: show-test.component.html  show-test.component.spec.ts  show-test.component.ts
backend/: Cargo.toml  diesel.toml
backend/sql/2023-01-01-000000_all/: down.sql  up.sql
backend/sql/2023-01-03-235135_users/: up.sql
backend/src/: auth.rs  cookies.rs  create_dummy.rs  relay_server.rs  utils.rs
backend/src/db/: crypt.rs  db.rs  mod.rs  schema.rs
backend/src/endpoints/: auth.rs  backend_state.rs  frontend.rs  mod.rs  testing.rs
cli-frontend/: Cargo.toml
cli-frontend/src/: config.rs  main.rs
common/: Cargo.toml
common/src/: common.rs  lib.rs  structs.rs  tracing.rs
diagrams/: ajax.dia
diagrams/connection-shell-client-session/: lifetimes.xcf  uml-sequence.dia
diagrams/serversession/: uml-sequence.dia
experimentzone/: admin_tool.py  basic_auth.py  file-io.py  invoke_as_user.py  password-hashing-temp.py.old  processes-sockets-test.py  repl_connection.py  repl_shell.py  repl_test.py  sock1.py  sock2.py  sock_client.py  sock_server.py  subprocess-test.py  test_basic_auth.py  testfile.txt.old  testscript.sh  yaml-stuff.py
frontend/: Cargo.toml  index.html
frontend/src/: auth.rs  main.rs  number.rs  utils.rs
frontend/src/auth/: auth.rs  login.rs  logout.rs
pisite/: __init__.py  admin_tool.py  auth.py  basic_auth.py  custom.sh  db.py  easy_executor.py  repl_connection.py  repl_shell.py  setup.py  test_basic_auth.py
pisite/static/: style.css
pisite/templates/: base.html  controls.html
py-pisite/: RUNNING.md  config.py  dev-run.py  flask-dev-.sh  flask-dev-main.sh  flask-dev-pi.sh  flask-dev.sh  gunicorn-pisite-config.py  pisite.fcgi  pisite.rc-file  pisite.service  required_packages.txt  run-in-shell.sh
py-pisite/instance/: config.py
py-pisite/pisite_app/: __init__.py  admin_tool.py  auth.py  common.py  easy_executor.py  mainsite.py  pisite.py
py-pisite/pisite_app/static/: test.js  test.ts
py-pisite/pisite_app/templates/: base.html  controls.html  index.html  login.html
react-frontend/: .eslintrc.json  package.json  webpack.config.js
react-frontend/pisite/: package.json
react-frontend/src/: ActionComponents.js  App.js  BasicResponseDisplayComponent.js  CustomEntryComponent.js  DataDisplayComponents.js  EndpointComponent.js  Endpoints.js  index.html
web-frontend/: Cargo.toml
web-frontend/src/: main.rs  number.rs
web-frontend/src/auth/: login.rs  logout.rs
