[package]
name = "rpisite"
version = "0.0.1"
edition = "2021"

[dependencies]
# axum and friends
axum = { version = "0.6.1", features = ["http2", "headers", "macros"] }
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
axum-extra = { version = "0.4.2", features = ["cookie", "cookie-private"] }
time = "0.3.17"

# diesel
diesel = { version = "2.0.3", features = ["sqlite", "r2d2", "time"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
r2d2 = "0.8.10"

# serde
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

# tracing
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# common crate
common = { path = "../common/" }

# other crates
rand =  "0.8.5"
thiserror = "1.0.38"
anyhow = "1.0.69"
chrono = "0.4.23"
colored = "2.0.0"
argon2 = { version = "0.4.1", features = ["std"] }
clap = { version = "4.1.4", features = ["derive"] }

[[bin]]
name = "relay_server"
path = "src/relay_server.rs"

[[bin]]
name = "main_server"
path = "src/main_server.rs"

[[bin]]
name = "create_dummy"
path = "src/create_dummy.rs"
