[package]
name = "cli-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

clap = { version = "4.1.4", features = ["derive"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["cookies", "json"] }
reqwest_cookie_store = "0.5.0"

thiserror = "1.0.38"
merge = "0.1.0"
anyhow = "1.0.69"
cookie_store = "0.19.0"
cookie = "0.16.2"
