[package]
name = "yew-frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
yew = "0.19"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }
js-sys = "0.3.60"
common = { path = "../common/" }
tracing = "0.1.37"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
